--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ h3 {
   font-weight: 500;
   font-size: 20px;
 }
+
 .header__burger {
   width: 30px;
   height: 22px;
@@ -87,16 +88,20 @@ h3 {
 .header__burger-el::before {
   top: -8px;
 }
+
 .header__burger-el::after {
   top: 8px;
 }
+
 @media (max-width: 480px) {
   .header {
     padding-top: 20px;
   }
+
   .nav {
     display: none;
   }
+
   .header__burger {
     display: flex;
   }
@@ -126,26 +131,6 @@ h3 {
   width: 100%;
   height: 100%;
   object-fit: cover;
-}
-@media (max-width: 480px) {
-  .about__container {
-    flex-direction: column-reverse;
-    align-items: center;
-    text-align: center;
-  }
-  .about__avatar {
-    width: 170px;
-    height: 170px;
-  }
-  .about__info {
-    padding: 0 24px;
-  }
-}
-
-.button {
-  background-color: red;
-  color: wheat;
-  min-width: 44px;
 }
 
 .recent-posts {
@@ -177,29 +162,9 @@ h3 {
   margin-right: 0;
 }
 
-@media (max-width: 480px) {
-    .recent-post__top {
-        justify-content: centers;
-
-    }
-    .recent-posts__link {
-        display: none;
-    }
-    .recent-posts__articles {
-        flex-direction: column;
-    }
-    .recent-posts__article {
-      width: 100%;
-      margin-right:0 ;
-      padding: 12px 22px 20px;
-      margin-bottom: 17pxs;
-      }
-
-}
 .separator {
   margin: 0px 26px;
 }
-
 
 .recent-posts__article {
   font-family: Roboto;
@@ -235,41 +200,48 @@ h3 {
 }
 
 .work__img {
-  width: 246px;
-  height: 180px;
-  border-radius: 6px;
-  display: inline-block;
-  float: left;
-  margin-right: 26px;
+height: 100%;
+width: 100%;
+object-fit: cover;
 }
 
 .work__day {
-  display: inline-block;
-  float: left;
-  width: 60px;
+  text-align: center;
+  min-width: 60px;
   height: 25px;
-  left: 410x;
-  top: 1141px;
   background-color: #142850;
   border-radius: 16px;
   color: white;
+  margin-right: 20px;
 }
 
 .featured {
   margin-top: 32px;
   margin-bottom: 48px;
 }
+
 .work {
-  margin-bottom: 66px;
+  display: flex;
+  padding: 35px 0;
+  border-bottom: 1px solid #C4C4C4;;
 }
+
 .work__category {
-  width: 374px;
-  height: 34px;
-  left: 498px;
   font-size: 20px;
-  line-height: 29px;
   color: #8695a4;
+  display: flex;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
+
 .work__info {
-  margin-top: 44px;
+}
+.work__subtitle {
+  display: flex;
+}
+.work__img-wrap {
+      border-radius: 6px;
+  min-width: 180px;
+  flex: 0 0 246px;
+  overflow: hidden;
 }
